--- a/views/rdv-list.html
+++ b/views/rdv-list.html
@@ -12,7 +12,7 @@ Filtre rapide
 <!--
 Liste des RDV
 -->
-<ul class="list-rdv" data-ng-repeat="(date, value) in items | filter : {etat:query} | groupBy :'dateJour' | orderBy:'dateJour'">
+<ul class="list-rdv" data-ng-repeat="(date, value) in items | filter : {etat:query, archive:false} | groupBy :'dateJour' | orderBy:'dateJour'">
 
     <li class="date">{{date|date:'dd/MM/yyyy'}}</li>
 
