--- a/views/tutoriel.html
+++ b/views/tutoriel.html
@@ -1,6 +1,6 @@
-<div class="tutoriel" ng-model="etape">
+<div class="tutoriel etape-{{etape}}" data-ng-model="etape">
 
-    <div data-ng-repeat="item in items" data-ng-show="item.id===etape" class="panel">
+    <div data-ng-repeat="item in items" data-ng-show="item.id === etape" class="panel">
 
         <h1 class="animated fadeIn">{{item.titre}}</h1>
 
